--- a/styles.css
+++ b/styles.css
@@ -31,13 +31,18 @@ h1 {
 
 #display {
     width: 100%;
-    height: 50px;
+    height: 80px; 
     font-size: 1.5em;
-    text-align: right;
+    text-align: left; 
     margin-bottom: 10px;
     padding: 10px;
     border-radius: 5px;
+    white-space: pre-wrap;
+    overflow-wrap: break-word; 
+    background-color: white;
+    color: #222;
 }
+
 
 .buttons {
     display: grid;
